# sandbox_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tmp_fetch.json
.github/: copilot-instructions.md
sandbox_storage/: action_statistics.csv  demo_test.parquet  df_sysaccesslogtestds.parquet  df_sysaccesslogtestds_20260116T022357Z_8e35a1673ae24250bc0644700fef040b.parquet
sandbox_storage/_scripts/: script_48b4f0bc22c34e11bd8ed3339b6d8f31.py  script_dd5cbe40c36d48f99e514663e3b18da0.py  script_ff1c7d2506564e5c8e868d39f8020239.py
scripts/: selfcheck_sandbox.py
src/app/: config.py  main.py  mcp_server.py  run_all.py
src/app/services/: sandbox.py  springboot_client.py  storage.py  summary.py
src/sandbox_storage/: script_096b666d0ed541318c91174e0362c63a.py  script_21f64af44c8d44dead10d15e02b53c65.py  script_2bd87eaabb8b45d28a5d5cecc7a5b084.py  script_51c84eef5a0d4cce9d4ad9ba726376fb.py  script_5d100fe279324ae78fb1f169b65bf0f6.py  script_7c3d97e319ed4691b298d47175227d33.py  script_7caaa303b0634df4b6f60ecb2a8d1845.py  script_85257b16e38647938c63a9ef4213faf3.py  script_ae039979a46e42b9a227eb7c92a7c231.py  script_aec44505431f423e818bc06311ceb493.py  script_c7020e6532944d058bb675d7b9dd3036.py  script_d105944c31484f37a735c1c5aaa81c76.py  script_df1666c3acff493096656dcbbca206e4.py  script_efbd2205de1f44aa84af318a194780f1.py  script_f3cb41fcf7e74d919820eee2e9af38a1.py  script_f5d583b51182402b8627574d7cc6c1fd.py
