[project]
name = "agent-data-bridge"
version = "0.1.0"
description = "FastAPI bridge for agent data fetch and sandbox execution"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pyarrow>=16.0.0",
    "mcp>=1.2.0",
]

[tool.uv]
package = false

[tool.uv.sources]

[tool.ruff]
line-length = 100
